Fixed navbar spacing (didn't stick for some reason?)

--- a/skin/light/light.css
+++ b/skin/light/light.css
@@ -417,7 +417,7 @@
 #urlbar-container{
   margin-left: 130px;
 }
-#main-window #browser[tabspinned="true"] #nav-bar {
+#main-window[tabspinned="true"] #nav-bar {
   margin-left:-260px;
 }
 #main-window[tabspinned="true"] #urlbar-container{
